Icons gap fix

--- a/style.css
+++ b/style.css
@@ -29,10 +29,6 @@ a {
     z-index: 1;
     width: 100%;
     position: fixed;
-    
-    
-    
-    
 }
 
 .navbar {
@@ -40,13 +36,10 @@ a {
     justify-content: center;
     align-items: center;
     height: 4rem;
-    
-    
 }
 
 .nav-link i {
     margin-right: 0.5rem;
-
 }
 
 .hamburger {
@@ -68,10 +61,7 @@ a {
     justify-content: space-between;
     align-items: center;
     gap: 3rem;
-    
 }
-
-
 
 .nav-link {
     font-size: 1.2rem;
@@ -154,8 +144,8 @@ a {
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     }
     50% {
-        transform: translateY(-5px); /* Justera höjden efter behov */
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3); /* Justera skuggan efter behov */
+        transform: translateY(-5px);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
     }
     100% {
         transform: translateY(0);
@@ -172,14 +162,8 @@ a {
     background-position: center;
     border-radius: 5%;
     position: relative;
-    animation: floating 3s ease-in-out infinite; /* Justera tiden efter behov */
+    animation: floating 3s ease-in-out infinite;
 }
-
-
-
-
-
-
 
 .skills {
     align-items: center;
@@ -197,12 +181,16 @@ a {
     margin-right: 7rem;
     padding-right: 2rem;
 }
+.skills-icons {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
 
+}
 .skills img {
     height: 4rem;
     transition: transform 0.3s ease-in-out;
 }
-
 
 .skills img:hover {
     transform: scale(1.3); 
@@ -225,18 +213,12 @@ a {
     width: 50%;
     background-position: center;
     border-radius: 5%;
-    
-
 }
 
 .about-text {
     width: 50%;
     display: flex;
     flex-direction: column;
-    
-    
-    
-    
 }
 
 .about h2 {
@@ -245,11 +227,6 @@ a {
     font-size: 1.5rem;
     line-height: 1.2;
     margin-bottom: 1rem;
-    
-    
-    
-    
-   
 }
 
 .about p {
@@ -257,19 +234,14 @@ a {
     font-size: 1.2rem;
     font-weight: 500;
     line-height: 1.6;
-    
     font-family: 'roboto slab', serif;
 }
 
-
-
-
 .project {
     background-color: #f9f9f9;
-     padding-top: 5rem;
+    padding-top: 5rem;
     align-items: center;
     padding-bottom: 5rem;
-    
 }
 
 .project h3 {
@@ -286,7 +258,6 @@ a {
     align-items: center;
     padding-bottom: 5rem;
     font-family: 'roboto slab', serif;
-
 }
 
 .contact-content {
@@ -324,7 +295,7 @@ a {
     font-weight: 700;
 }
 
-.contact-info i{
+.contact-info i {
     align-items: center;
     background-color: #fff;
     border-radius: 50%;
@@ -335,7 +306,6 @@ a {
     height: 3.5rem;
     justify-content: center;
     width: 3.5rem;
-    
 }
 
 .contact-title {
@@ -343,7 +313,6 @@ a {
     flex-direction: column;
     gap: 1rem;
 }
-
 
 .footer {
     background-color: #2d2e32;
@@ -358,13 +327,11 @@ a {
     display: flex;
     gap: 2rem;
     justify-content: center;
-    
 }
 
 .footer-links a {
     color: #fff;
     font-size: 1.8rem;
-    
 }
 
 .footer-links a:hover {
@@ -375,9 +342,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-   
 }
-
 
 /* Media queries */
 @media screen and (max-width: 900px) {
@@ -386,7 +351,6 @@ a {
         gap: 3rem;
         height: auto;
         text-align: center;
-        
     }
 
     .hero-main {
@@ -395,13 +359,10 @@ a {
         height: auto;
         text-align: center;
         padding-top: 6rem;
-        
-        
     }
 
     .home {
         height: auto;
-        
         padding-bottom: 3rem;
     }
     
@@ -435,8 +396,6 @@ a {
         max-width: 100%;
     }
 
-    
-    
     .about-content {
         align-items: center;
         flex-direction: column;
@@ -444,7 +403,6 @@ a {
         height: auto;
         text-align: center;
         padding-top: 3rem;
-        
     }
 
     .about-content h2 {
@@ -454,22 +412,17 @@ a {
    
     .about-text {
         width: 100%;
-       
-    
     }
+    
     .about-img {
         height: 20rem;
         width: 20rem;
     }
 }
 
-
-
-
 @media only screen and (max-width: 900px) {
     .nav-menu {
         position: fixed;
-
         left: -100%;
         top: 3rem;
         flex-direction: column;
@@ -481,7 +434,6 @@ a {
         box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
         z-index: 1;
         gap: 0rem;
-        
     }
 
     .nav-link {
@@ -516,10 +468,6 @@ a {
         transform: translateY(-8px) rotate(-45deg);
     }
 
-  
-
-  
-
     .contact-info {
         flex-direction: column;
         gap: 2rem;
@@ -528,11 +476,8 @@ a {
 }
 
 @media screen and (max-width: 600px) {
- 
     .footer-content {
         flex-direction: column;
         gap: 2rem;
     }
- 
-
 }
